welcome.lessons.welcome.variables.Variables.scala.error
Variables:13: error: ')' expected but 'if' found.
if (dejaFait!=nbPas){
^